--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hangman</title>
+  <title>DD Hangman</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -12,20 +12,36 @@
 <body class= "bg-light mx-0 px-0">
 
 
-  <div class="container mt-1">
-    <div class="d-inline-flex bd-highlight mt-1">
-      <a class="nav-link col-md" href="index.html">Home</a>
-      <a class="nav-link col-md" href="Schedule-about.html #About">About</a>
-      <a class="nav-link col-md" href="Speakers.html">Speakers</a>
-      <a class="nav-link col-md" href="Schedule-about.html">Schedule</a>
+  <div class="container mt-1" id = "top">
+    <div id= "header"><h1>DIRTY DOZEN HANGMAN</h1></div>
     </div>
-      <div class="row">
-        <div class="col-md-1">
+      <div class="row" id = "below">
+        <div class="col-md-1"  id = "left">
         </div>
-        <div class="col-md-10" id="pattern">
+        <div class="col-md-10 row"  id = "middle">
+          <div class="row" >
+            <div class="card" style="width: 18rem;" >
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text" id="guessed">Already guessed</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <p  class="card-text" id="word"></p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <p  class="card-text"  id="steps">Steps remaining</p>
+              </div>
+            </div>
+          </div>
         </div>
           <p class="text-right w-100" > &copyMMXX Gonkulishus</p>
-          <div class="col-md-1">
+          <div class="col-md-1" id = "right">
           </div>
         </div>
       </div>
