Want to do more but game is complete

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body class= "bg-light mx-0 px-0">
 
 
+
+
   <div class="container mt-1" id = "top">
     <div id= "header"><h1>DIRTY DOZEN HANGMAN</h1></div>
     </div>
@@ -20,27 +22,27 @@
         </div>
         <div class="col-md-10 row"  id = "middle">
           <div class="row" >
-            <div class="card" style="width: 18rem;" >
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card h-100" style="width: 18rem;" >
+              <img src="assets/images/guessed.jpg" class="card-img-top h=100" alt="Guessed">
               <div class="card-body">
                 <p class="card-text" id="guessed">Already guessed</p>
               </div>
             </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card h-100" style="width: 18rem;">
+              <img src="assets/images/word.jpg" class="card-img-top" alt="The WORD">
               <div class="card-body">
-                <p  class="card-text" id="word"></p>
+                <p  class="card-text" id="word">The WORD</p>
               </div>
             </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card h-100" style="width: 18rem;">
+              <img src="assets/images/steps.jpg" class="card-img-top" alt="Missed">
               <div class="card-body">
                 <p  class="card-text"  id="steps">Steps remaining</p>
               </div>
             </div>
           </div>
         </div>
-          <p class="text-right w-100" > &copyMMXX Gonkulishus</p>
+          <p class="text-center w-100" > &copyMMXX Gonkulishus</p>
           <div class="col-md-1" id = "right">
           </div>
         </div>
