ver 1.1 improved html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
                 <p  class="card-text"  id="steps">Steps remaining</p>
               </div>
             </div>
+            <div class="col-md-12 w=100 text-center" >
+              <h3  id = "billboard">Don't let them see you're afraid kid!</h3>
+            </div>
+            <p class="text-center w-100" > &copyMMXX Gonkulishus</p>
           </div>
         </div>
-          <p class="text-center w-100" > &copyMMXX Gonkulishus</p>
           <div class="col-md-1" id = "right">
           </div>
         </div>
