ver 1.11 cosmetic changes

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
             <div class="card h-100" style="width: 18rem;" >
               <img src="assets/images/guessed.jpg" class="card-img-top h=100" alt="Guessed">
               <div class="card-body">
-                <p class="card-text" id="guessed">Already guessed</p>
+                <h4 class="card-text" id="guessed">Already guessed</h4>
               </div>
             </div>
             <div class="card h-100" style="width: 18rem;">
               <img src="assets/images/word.jpg" class="card-img-top" alt="The WORD">
               <div class="card-body">
-                <p  class="card-text" id="word">The WORD</p>
+                <h4  class="card-text" id="word">The WORD</h4>
               </div>
             </div>
             <div class="card h-100" style="width: 18rem;">
               <img src="assets/images/steps.jpg" class="card-img-top" alt="Missed">
               <div class="card-body">
-                <p  class="card-text"  id="steps">Steps remaining</p>
+                <h4  class="card-text"  id="steps">Steps remaining</h4>
               </div>
             </div>
             <div class="col-md-12 w=100 text-center" >
-              <h3  id = "billboard">Don't let them see you're afraid kid!</h3>
+              <h3  id = "billboard">Keep telling them you're innocent!</h3>
             </div>
             <p class="text-center w-100" > &copyMMXX Gonkulishus</p>
           </div>
