ver 1.2 Final ... or so   Look for a brutal version

--- a/index.html
+++ b/index.html
@@ -9,42 +9,44 @@
 
 </head>
 
-<body class= "bg-light mx-0 px-0">
+<body class= "bg-dark mx-0 px-0">
 
 
 
 
-  <div class="container mt-1" id = "top">
-    <div id= "header"><h1>DIRTY DOZEN HANGMAN</h1></div>
+  <div class="container mt-1 bg-danger" id = "top">
+    <div id= "header bg-danger" >
+      <img src="assets/images/top.jpg" class="card-img-top w=100" alt="The Dirty Dozen Hangman"></div>
     </div>
       <div class="row" id = "below">
         <div class="col-md-1"  id = "left">
         </div>
-        <div class="col-md-10 row"  id = "middle">
-          <div class="row" >
-            <div class="card h-100" style="width: 18rem;" >
-              <img src="assets/images/guessed.jpg" class="card-img-top h=100" alt="Guessed">
+        <div class="col-md-10 row mx-auto"  id = "middle">
+          <div class="row  row mx-auto" >
+            <div class="card h-85  mx-auto" style="width: 18rem;" >
+              <img src="assets/images/guessed.jpg" class="card-img-top" alt="Guessed">
               <div class="card-body">
                 <h4 class="card-text" id="guessed">Already guessed</h4>
               </div>
             </div>
-            <div class="card h-100" style="width: 18rem;">
+            <div class="card h-85  mx-auto" style="width: 18rem;">
               <img src="assets/images/word.jpg" class="card-img-top" alt="The WORD">
               <div class="card-body">
                 <h4  class="card-text" id="word">The WORD</h4>
               </div>
             </div>
-            <div class="card h-100" style="width: 18rem;">
+            <div class="card h-85 mx-auto" style="width: 18rem;">
               <img src="assets/images/steps.jpg" class="card-img-top" alt="Missed">
               <div class="card-body">
                 <h4  class="card-text"  id="steps">Steps remaining</h4>
               </div>
             </div>
-            <div class="col-md-12 w=100 text-center" >
-              <h3  id = "billboard">Keep telling them you're innocent!</h3>
-            </div>
-            <p class="text-center w-100" > &copyMMXX Gonkulishus</p>
+            <div class="col-md-12  text-center  bg-white" >
+              <h3 class="" id = "billboard" >Keep telling them you're innocent!</h3>
+            </div >
+            <p class="col-md-12 text-center bg-white " > &copyMMXX Gonkulishus</p>
           </div>
+          <div class="col-md-1"></div>
         </div>
           <div class="col-md-1" id = "right">
           </div>
